# anomer_backend

./: .env.example  .gitignore  README.md  alembic.sh  create_env_example.sh  create_redis_conf.sh  docker-compose.example.yml  docker-compose.yml  install.sh  main.py  pyproject.toml  redis.conf.example  update.sh
alembic/: alembic.ini  env.py
alembic/versions/: 2025_07_19_1817-f523a501cca0_create_users_table.py  2025_07_28_2303-681cba3fbb2e_update_users_table.py  2025_08_14_1959-52ca6bc4490c_add_blacklistedtoken_table_for_token_.py  2025_08_14_2201-27dee4214239_update_blacklisted_tokens_table.py  2025_08_14_2211-034d5429b038_change_expires_at_to_timestamp_without_.py  2025_08_14_2212-a5a562b63894_change_expires_at_to_timestamp_without_.py  2025_08_21_2038-1dc36df0718d_add_status_enum.py  2025_08_31_2117-2c7720c2e6ce_initial.py  2025_08_31_2200-2c7720c2e6popa_add_cascade_delete_to_foreign_key.py
docs/: INSTALL.md  LAUNCH.md  REGISTRATION.md  START.md  TECH_INFO.md  TROUBLESHOOTING.md  test_schemas.md
docs/excalidrawLibrary/: my_library.excalidrawlib
docs/schemas/: api.excalidraw  tables.drawio
scripts/: create_env_example.sh  env_editor.py  replacer.py
src/: app.py  config.py
src/api/v1/: __init__.py
src/api/v1/auth/: service.py  validations.py  views.py
src/api/v1/users/: schemas.py  service.py  views.py
src/api_v1/: __init__.py
src/api_v1/auth/: views.py
src/database/: __init__.py  mixins.py  ram_db.py  tables.py
src/database/crud/: blacklisted_tokens.py  users.py
src/database/mixins/: __init__.py  created_at.py  created_updated_at_mixin.py  first_seen.py  int_id_pk_mixin.py  integer_id.py  last_seen.py  updated_at.py  uuid_id.py  uuid_id_pk_mixin.py
src/database/models/: base.py  mixins.py
src/database/pg_func/: __init__.py
src/database/tables/: __init__.py  base.py  blacklisted_tokens.py  device.py  users.py
src/entities/: __init__.py
src/exceptions/: __init__.py  error_codes.py  exception_handlers.py  http_exceptions.py
src/schemas/: users.py
src/security/: hashing_encoding.py  tokens.py
src/utils/: case_converter.py  emails.py  redis_client.py
src/utils/email_templates/: verification.html
