[project]
name = "anoma-backend"
version = "0.0.1"
description = "Backend server implementation for iOS application Anoma"
readme = "README.md"
requires-python = ">=3.12.3"
license = { file = "LICENSE" }
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.14",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn>=0.35.0",
]

[tool.ruff]
fix = true
target-version = "py312" # Python 3.12
line-length = 100 # Максимальная длина строки — 100 символов
exclude = [
    ".git",
    ".venv",
    "docs",
    "migrations",
    "__pycache__"
]

[tool.ruff.lint]
ignore = [
    "RUF001", # Игнорировать ошибку "строка содержит кириллицу"
    "RUF003" # "комментарий содержит кириллицу"
] 
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "RUF", # Ruff-specific rules
    "FAST" # FastAPI specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["src"] # Модули которые будут считаться локальными
combine-as-imports = true # Объединять импорты с 'as' в одну строку

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
