[project]
name = "anomer-backend"
version = "0.0.1"
description = "Backend server implementation for iOS application Anomer"
readme = "README.md"
requires-python = ">=3.12.3"
license = { file = "LICENSE" }
dependencies = [
    "aiosmtplib>=4.0.1",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "orjson>=3.11.0",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn>=0.35.0",
]

[tool.ruff]
fix = true
show-fixes = true
target-version = "py312" # Python 3.12
line-length = 88 # Максимальная длина строки — 88 символов
exclude = [
    ".git",
    ".venv",
    "docs",
    "migrations",
    "__pycache__"
]

[tool.ruff.lint]
ignore = [
    "RUF001", # "строка содержит кириллицу"
    "RUF003" # "комментарий содержит кириллицу"
] 
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "RUF", # Ruff-specific rules
    "FAST" # FastAPI specific rules
]

[tool.ruff.lint.isort]
length-sort = true # короткие импорты идут первыми
known-first-party = ["src"] # Модули которые будут считаться локальными
combine-as-imports = true # Объединять импорты с 'as' в одну строку
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true # форматировать код в док стрингах
skip-magic-trailing-comma = true
